--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,9 @@
     </form>
   </p>
 
+  <ul id="messageList">
+  </ul>
+
   <script type="text/javascript" src="client.js"></script>
 </body>
 </html>
